--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -45,6 +45,14 @@ ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
 ADC1.ScanConvMode=ADC_SCAN_ENABLE
 ADC1.master=1
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC3.CommonPathInternal=null|null|null|null
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,CommonPathInternal
+ADC3.NbrOfConversionFlag=1
+ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC3.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -113,15 +121,16 @@ KeepUserPlacement=false
 Mcu.CPN=STM32G474RET3
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
-Mcu.IP1=CORDIC
-Mcu.IP2=DMA
-Mcu.IP3=MotorControl
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IP8=USART1
-Mcu.IPNb=9
+Mcu.IP1=ADC3
+Mcu.IP2=CORDIC
+Mcu.IP3=DMA
+Mcu.IP4=MotorControl
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -504,8 +513,7 @@ PA9.Signal=S_TIM1_CH2
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=M1_CURR_AMPL
 PB0.Locked=true
-PB0.Mode=IN15-Single-Ended
-PB0.Signal=ADC1_IN15
+PB0.Signal=SharedAnalog_PB0
 PB13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PB13.GPIO_Label=M1_PWM_UL
 PB13.GPIO_PuPd=GPIO_PULLDOWN
@@ -655,6 +663,9 @@ SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM1_CH3.ConfNb=1
+SH.SharedAnalog_PB0.0=ADC1_IN15,IN15-Single-Ended
+SH.SharedAnalog_PB0.1=ADC3_IN12,IN12-Single-Ended
+SH.SharedAnalog_PB0.ConfNb=2
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM1.AutomaticOutput=TIM_AUTOMATICOUTPUT_DISABLE
 TIM1.Break2Filter=3
