--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -195,21 +195,21 @@ MotorControl.HWV_CS=SingleShunt_AmplifiedCurrents
 MotorControl.HWV_OCP=OnPowerStageOCP
 MotorControl.HWV_PWM=DrivingHighAndLowSides
 MotorControl.HW_COMPLEMENTED_LOW_SIDE=false
-MotorControl.HW_DEAD_TIME_NS=800
+MotorControl.HW_DEAD_TIME_NS=8000
 MotorControl.IPParameters=ADC_AHBPERIPH,ADC_CLOCK_WB_DIV,ADC_PERIPH,ADC_REFERENCE_VOLTAGE,BOARD,BUS_VOLTAGE_READING,CCMRAM_ENABLED,CLOCK_FREQUENCY,CLOCK_SOURCE,CPU_CLK_170_MHZ,CTLBOARD_NAME,CUBE_MX_VER,CURR_SAMPLING_TIME,CURRENT_READING_TOPOLOGY,DBG_MCU_LOAD_MEASURE,DEBUG_DAC_FUNCTIONALITY_EN,DISSIPATIVE_BRAKE_POLARITY,DRIVE_NUMBER,DRIVE_TYPE,DRIVES_NUMBER_SELECTION,EMERGENCY_STOP_GPIO_PIN,EMERGENCY_STOP_GPIO_PORT,ENCODER_AVAILABLE,ENCODER_PPR,EXT_CLK_24_MHZ,EXT_CLOCK_FREQUENCY,FEEDBACK_NET_FILTERING,HALL_SENSORS_AVAILABLE,HIGH_SIDE_IDLE_STATE,HW_COMPLEMENTED_LOW_SIDE,HW_DEAD_TIME_NS,HWV_CS,HWV_OCP,HWV_PWM,IPs,LOW_MEMORY_FOOTPRINT_REG,LOW_SIDE_IDLE_STATE,LOW_SIDE_SIGNALS_ENABLING,M1_AMPLIFICATION_GAIN,M1_ANGC,M1_AUXILIARY_SPEED_SENSOR,M1_BEMF_CONSISTENCY_GAIN,M1_BEMF_CONSISTENCY_TOL,M1_BOARD_MAX_CURRENT,M1_BUS_VOLTAGE_READING,M1_CONSTANT1_D,M1_CONSTANT1_Q,M1_CONSTANT2_QD,M1_CS_ADC_NUM,M1_CS_ADC_PHASE_SHARED,M1_CS_ADC_U,M1_CS_CHANNEL_U,M1_CURR_SAMPLING_TIME,M1_CURRENT_AMPLIFICATION_TOPO,M1_CURRENT_SENSING_TOPO,M1_DBG_OPEN_LOOP_ENABLE,M1_DC_CURRENT_RS_MEAS,M1_DEFAULT_CONTROL_MODE,M1_DEFAULT_FLUX_COMPONENT,M1_DEFAULT_TARGET_SPEED_RPM,M1_DEFAULT_TORQUE_COMPONENT,M1_DISCONTINUOUS_PWM,M1_DISSIPATIVE_BRAKE_POLARITY,M1_DP_TOPOLOGY,M1_DRIVE_TYPE,M1_dV_dT,M1_ENABLE_SL_ALGO_FROM_PHASE,M1_ENCODER_PPR,M1_F1,M1_F2,M1_FEED_FORWARD_CURRENT_REG_ENABLING,M1_FLUX_WEAKENING_ENABLING,M1_FW_KI_GAIN,M1_FW_KIDIV,M1_FW_KP_GAIN,M1_FW_KPDIV,M1_FW_VOLTAGE_REF,M1_GAIN1,M1_GAIN2,M1_HALL_PHASE_SHIFT,M1_HALL_SENSORS_PLACEMENT,M1_HIGH_SIDE_IDLE_STATE,M1_HW_DEAD_TIME_NS,M1_ICL_ENABLED,M1_ID_DEMAG,M1_IQMAX,M1_LDLQ_RATIO,M1_LOW_SIDE_IDLE_STATE,M1_LOW_SIDE_SIGNALS_ENABLING,M1_LS,M1_MAX_APPLICATION_SPEED,M1_MAX_MODULATION_INDEX,M1_MIN_APPLICATION_SPEED,M1_MOTOR_MAX_SPEED_RPM,M1_MOTOR_NAME,M1_MOTOR_RATED_FLUX,M1_MOTOR_VOLTAGE_CONSTANT,M1_MTPA_ENABLING,M1_NB_CONSECUTIVE_TESTS,M1_NOMINAL_BUS_VOLTAGE_V,M1_NOMINAL_CURRENT,M1_OBS_MINIMUM_SPEED_RPM,M1_OCP_BKIN_FILTER,M1_OCP_BKIN_MODE,M1_OCP_BKIN_POLARITY,M1_OCP_DESTINATION,M1_OCP_TOPOLOGY,M1_OFST,M1_OV_TEMPERATURE_PROT_ENABLING,M1_OV_VOLTAGE_PROT_ENABLING,M1_OVERMODULATION,M1_OVP_THRESHOLD_LOW,M1_PHASE1_DURATION,M1_PHASE1_FINAL_CURRENT,M1_PHASE1_FINAL_SPEED_RPM,M1_PHASE2_DURATION,M1_PHASE2_FINAL_CURRENT,M1_PHASE2_FINAL_SPEED_RPM,M1_PHASE3_DURATION,M1_PHASE3_FINAL_CURRENT,M1_PHASE3_FINAL_SPEED_RPM,M1_PHASE4_DURATION,M1_PHASE4_FINAL_CURRENT,M1_PHASE4_FINAL_SPEED_RPM,M1_PHASE5_DURATION,M1_PHASE5_FINAL_CURRENT,M1_PHASE5_FINAL_SPEED_RPM,M1_PID_FLUX_KD_DEFAULT,M1_PID_FLUX_KI_DEFAULT,M1_PID_FLUX_KP_DEFAULT,M1_PID_SPEED_KD_DEFAULT,M1_PID_SPEED_KI_DEFAULT,M1_PID_SPEED_KP_DEFAULT,M1_PID_TORQUE_KD_DEFAULT,M1_PID_TORQUE_KI_DEFAULT,M1_PID_TORQUE_KP_DEFAULT,M1_PLL_KI_GAIN,M1_PLL_KP_GAIN,M1_POLE_PAIR_NUM,M1_POSITION_CTRL_ENABLING,M1_POTENTIOMETER_ENABLE,M1_POWERBOARD_NAME,M1_PWM_CHARGE_BOOT_CAP_DUTY_CYCLES,M1_PWM_CHARGE_BOOT_CAP_MS,M1_PWM_DRIVER_PN,M1_PWM_FREQUENCY,M1_PWM_TIMER_BRK_IRQ,M1_PWM_TIMER_SELECTION,M1_PWM_TIMER_UP_IRQ,M1_REGULATION_EXECUTION_RATE,M1_RS,M1_RSHUNT,M1_SEGDIV,M1_SHARED_SIGNAL_ENABLE,M1_SP_KDDIV,M1_SP_KIDIV,M1_SP_KPDIV,M1_SPD_DIFFERENTIAL_TERM_ENABLING,M1_SPEED_BAND_LOWER_LIMIT,M1_SPEED_BAND_UPPER_LIMIT,M1_SPEED_FEEDBACK_CHECK,M1_SPEED_LOOP_FREQUENCY_HZ,M1_SPEED_SENSOR,M1_SS_MEAS_ERRORS_BEFORE_FAULTS,M1_STARTING_ANGLE_DEG,M1_STO_FIFO_DEPTH_01HZ,M1_STO_FIFO_DEPTH_DPP,M1_SW_DEADTIME_NS,M1_T_MAX,M1_T0_C,M1_TEMP_ADC_SAMPLING_TIME,M1_TEMP_FDBK_ADC,M1_TEMP_FDBK_CHANNEL,M1_TEMPERATURE_READING,M1_TF_KDDIV,M1_TF_KIDIV,M1_TF_KPDIV,M1_TNOISE_NS,M1_TRANSITION_DURATION,M1_TRISE_NS,M1_USE_INTERNAL_OPAMP,M1_UV_VOLTAGE_PROT_ENABLING,M1_V0_V,M1_VARIANCE_THRESHOLD,M1_VBUS_ADC,M1_VBUS_ADC_SAMPLING_TIME,M1_VBUS_CHANNEL,M1_VBUS_PARTITIONING_FACTOR,MAX_READABLE_CURRENT,MC_WORKBENCH_VERSION,MCP_ASPEP_OVER_UART,MCP_ASYNC_EN,MCP_ASYNC_OVER_ASPEP_EN,MCP_ASYNC_OVER_UART_A_EN,MCP_DMA_RX_UART_A,MCP_DMA_TX_UART_A,MCP_DMACH_RX_UART_A,MCP_DMACH_TX_UART_A,MCP_EN,MCP_IRQ_HANDLER_DMA_RX_UART_A,MCP_IRQ_HANDLER_UART_A,MCP_OVER_ASPEP_EN,MCP_OVER_STLNK_EN,MCP_OVER_UART_A_EN,MCP_OVER_UART_B_EN,MCP_RX_SYNC_PAYLOAD_MAX,MCP_TX_SYNC_PAYLOAD_MAX,MCU,MCU_FAMILY,MCU_LINE,MCU_NAME,MCU_PACKAGE,MCU_TYPE,MCU_USERNAME,MOTOR_PROFILER,MOTOR_TYPE,OV_TEMPERATURE_PROT_ENABLING,OV_VOLTAGE_PROT_ENABLING,PHASE_CURRENTS_ADC,PHASE_CURRENTS_CHANNEL,PHASE_CURRENTS_GPIO_PIN,PHASE_CURRENTS_GPIO_PORT,PHASE_UH_GPIO_PIN,PHASE_UH_GPIO_PORT,PHASE_UH_POLARITY,PHASE_UL_GPIO_PIN,PHASE_UL_GPIO_PORT,PHASE_UL_POLARITY,PHASE_VH_GPIO_PIN,PHASE_VH_GPIO_PORT,PHASE_VH_POLARITY,PHASE_VL_GPIO_PIN,PHASE_VL_GPIO_PORT,PHASE_VL_POLARITY,PHASE_WH_GPIO_PIN,PHASE_WH_GPIO_PORT,PHASE_WH_POLARITY,PHASE_WL_GPIO_PIN,PHASE_WL_GPIO_PORT,PHASE_WL_POLARITY,POTENTIOMETER_READING,PWM_FREQUENCY,PWM_TIMER_SELECTION,R_BRAKE_GPIO_PIN,R_BRAKE_GPIO_PORT,REGULATION_EXECUTION_RATE,RTOS,SINGLE_SHUNT,SINGLEDRIVE,SPD_DIFFERENTIAL_TERM_ENABLING,SPEED_SENSOR_SELECTION,START_STOP_BTN,STATE_OBSERVER_PLL,STM32G474RE,SW_DEADTIME_NS,TEMP_ADC_SAMPLING_TIME,TEMP_FDBK_ADC,TEMP_FDBK_CHANNEL,TEMP_FDBK_GPIO_PIN,TEMP_FDBK_GPIO_PORT,TEMPERATURE_READING,TFDIFFERENTIAL_TERM_ENABLING,TRISE_NS,USART_RX_GPIO_PIN,USART_RX_GPIO_PORT,USART_SELECTION,USART_SELECTION_A,USART_SPEED,USART_TX_GPIO_PIN,USART_TX_GPIO_PORT,USE_3OPAMPS,USE_INTERNAL_OPAMP,UV_VOLTAGE_PROT_ENABLING,VBUS_ADC,VBUS_ADC_SAMPLING_TIME,VBUS_CHANNEL,VBUS_GPIO_PIN,VBUS_GPIO_PORT,WB_to_Mx_template_version,WB_to_Mx_version,WB_UI_CUTOFF_FREQUENCY,WB_UI_ENCODER_HAS_INDEX_PIN,WB_UI_FLUX_TARGET,WB_UI_FRICTION,WB_UI_INERTIA,WB_UI_MAGNETIC_STRUCTURE,WB_UI_MAX_CURRENT,WB_UI_MAX_NOMINAL_DC_VOLTAGE,WB_UI_MOTOR_DESCRIPTION,WB_UI_OCP_DISABLING_ENABLE,WB_UI_OCP_THRESHOLD,WB_UI_PW_BOARD_MAX_RATED_CURRENT,WB_UI_PW_BOARD_MAX_VOLTAGE,WB_UI_PW_BOARD_MIN_VOLTAGE,WB_UI_VPOL
 MotorControl.IPs=CORDIC,SYS,NVIC,RCC,MotorControl,TIM1,ADC1,USART1,DMA
 MotorControl.LOW_MEMORY_FOOTPRINT_REG=false
 MotorControl.LOW_SIDE_IDLE_STATE=false
 MotorControl.LOW_SIDE_SIGNALS_ENABLING=LS_PWM_TIMER
-MotorControl.M1_AMPLIFICATION_GAIN=6.67
-MotorControl.M1_ANGC={-471,-1453,-2409,-3364,-4309,-5240,-6171,-7073}
+MotorControl.M1_AMPLIFICATION_GAIN=3.01
+MotorControl.M1_ANGC={-481,-1443,-2405,-3364,-4301,-5234,-6163,-7102}
 MotorControl.M1_AUXILIARY_SPEED_SENSOR=NONE
 MotorControl.M1_BEMF_CONSISTENCY_GAIN=64
 MotorControl.M1_BEMF_CONSISTENCY_TOL=64
 MotorControl.M1_BOARD_MAX_CURRENT=13.3
 MotorControl.M1_BUS_VOLTAGE_READING=true
-MotorControl.M1_CONSTANT1_D=119405
-MotorControl.M1_CONSTANT1_Q=170579
+MotorControl.M1_CONSTANT1_D=264959
+MotorControl.M1_CONSTANT1_Q=378514
 MotorControl.M1_CONSTANT2_QD=34035
 MotorControl.M1_CS_ADC_NUM=1
 MotorControl.M1_CS_ADC_PHASE_SHARED=NONE
@@ -231,7 +231,7 @@ MotorControl.M1_DRIVE_TYPE=FOC
 MotorControl.M1_ENABLE_SL_ALGO_FROM_PHASE=4
 MotorControl.M1_ENCODER_PPR=400
 MotorControl.M1_F1=16384
-MotorControl.M1_F2=2048
+MotorControl.M1_F2=4096
 MotorControl.M1_FEED_FORWARD_CURRENT_REG_ENABLING=false
 MotorControl.M1_FLUX_WEAKENING_ENABLING=true
 MotorControl.M1_FW_KIDIV=32768
@@ -240,11 +240,11 @@ MotorControl.M1_FW_KPDIV=32768
 MotorControl.M1_FW_KP_GAIN=3000
 MotorControl.M1_FW_VOLTAGE_REF=985
 MotorControl.M1_GAIN1=-24498
-MotorControl.M1_GAIN2=23146
+MotorControl.M1_GAIN2=17052
 MotorControl.M1_HALL_PHASE_SHIFT=300
 MotorControl.M1_HALL_SENSORS_PLACEMENT=DEGREES_120
 MotorControl.M1_HIGH_SIDE_IDLE_STATE=false
-MotorControl.M1_HW_DEAD_TIME_NS=800
+MotorControl.M1_HW_DEAD_TIME_NS=8000
 MotorControl.M1_ICL_ENABLED=false
 MotorControl.M1_ID_DEMAG=-13.3
 MotorControl.M1_IQMAX=13.210894566168061
@@ -252,26 +252,26 @@ MotorControl.M1_LDLQ_RATIO=0.700
 MotorControl.M1_LOW_SIDE_IDLE_STATE=false
 MotorControl.M1_LOW_SIDE_SIGNALS_ENABLING=LS_PWM_TIMER
 MotorControl.M1_LS=0.005
-MotorControl.M1_MAX_APPLICATION_SPEED=1000
+MotorControl.M1_MAX_APPLICATION_SPEED=6000
 MotorControl.M1_MAX_MODULATION_INDEX=100
 MotorControl.M1_MIN_APPLICATION_SPEED=0
-MotorControl.M1_MOTOR_MAX_SPEED_RPM=1000
+MotorControl.M1_MOTOR_MAX_SPEED_RPM=6000
 MotorControl.M1_MOTOR_NAME=BTH420SDPC9EQA
 MotorControl.M1_MOTOR_RATED_FLUX=1.055730079
 MotorControl.M1_MOTOR_VOLTAGE_CONSTANT=43.1
 MotorControl.M1_MTPA_ENABLING=true
 MotorControl.M1_NB_CONSECUTIVE_TESTS=3
-MotorControl.M1_NOMINAL_BUS_VOLTAGE_V=80
+MotorControl.M1_NOMINAL_BUS_VOLTAGE_V=400
 MotorControl.M1_NOMINAL_CURRENT=13.3
-MotorControl.M1_OBS_MINIMUM_SPEED_RPM=800
+MotorControl.M1_OBS_MINIMUM_SPEED_RPM=1500
 MotorControl.M1_OCP_BKIN_FILTER=3
 MotorControl.M1_OCP_BKIN_MODE=EXT_MODE
 MotorControl.M1_OCP_BKIN_POLARITY=EMSTOP_ACTIVE_LOW
 MotorControl.M1_OCP_DESTINATION=TIM_BKIN
 MotorControl.M1_OCP_TOPOLOGY=EXTERNAL
-MotorControl.M1_OFST={0,77,227,451,748,1113,1551,2046}
+MotorControl.M1_OFST={0,33,102,203,336,501,698,930}
 MotorControl.M1_OVERMODULATION=false
-MotorControl.M1_OVP_THRESHOLD_LOW=86
+MotorControl.M1_OVP_THRESHOLD_LOW=400
 MotorControl.M1_OV_TEMPERATURE_PROT_ENABLING=false
 MotorControl.M1_OV_VOLTAGE_PROT_ENABLING=false
 MotorControl.M1_PHASE1_DURATION=1000
@@ -282,24 +282,24 @@ MotorControl.M1_PHASE2_FINAL_CURRENT=1
 MotorControl.M1_PHASE2_FINAL_SPEED_RPM=0
 MotorControl.M1_PHASE3_DURATION=0
 MotorControl.M1_PHASE3_FINAL_CURRENT=1
-MotorControl.M1_PHASE3_FINAL_SPEED_RPM=500
-MotorControl.M1_PHASE4_DURATION=5000
+MotorControl.M1_PHASE3_FINAL_SPEED_RPM=1000
+MotorControl.M1_PHASE4_DURATION=6666
 MotorControl.M1_PHASE4_FINAL_CURRENT=1
-MotorControl.M1_PHASE4_FINAL_SPEED_RPM=700
+MotorControl.M1_PHASE4_FINAL_SPEED_RPM=2000
 MotorControl.M1_PHASE5_DURATION=48000
 MotorControl.M1_PHASE5_FINAL_CURRENT=1
-MotorControl.M1_PHASE5_FINAL_SPEED_RPM=900
+MotorControl.M1_PHASE5_FINAL_SPEED_RPM=3000
 MotorControl.M1_PID_FLUX_KD_DEFAULT=100
-MotorControl.M1_PID_FLUX_KI_DEFAULT=269
-MotorControl.M1_PID_FLUX_KP_DEFAULT=1886
+MotorControl.M1_PID_FLUX_KI_DEFAULT=120
+MotorControl.M1_PID_FLUX_KP_DEFAULT=1674
 MotorControl.M1_PID_SPEED_KD_DEFAULT=0
-MotorControl.M1_PID_SPEED_KI_DEFAULT=16
-MotorControl.M1_PID_SPEED_KP_DEFAULT=3934
+MotorControl.M1_PID_SPEED_KI_DEFAULT=7
+MotorControl.M1_PID_SPEED_KP_DEFAULT=3545
 MotorControl.M1_PID_TORQUE_KD_DEFAULT=100
-MotorControl.M1_PID_TORQUE_KI_DEFAULT=269
-MotorControl.M1_PID_TORQUE_KP_DEFAULT=2695
-MotorControl.M1_PLL_KI_GAIN=12
-MotorControl.M1_PLL_KP_GAIN=133
+MotorControl.M1_PID_TORQUE_KI_DEFAULT=120
+MotorControl.M1_PID_TORQUE_KP_DEFAULT=2392
+MotorControl.M1_PLL_KI_GAIN=71
+MotorControl.M1_PLL_KP_GAIN=798
 MotorControl.M1_POLE_PAIR_NUM=2
 MotorControl.M1_POSITION_CTRL_ENABLING=false
 MotorControl.M1_POTENTIOMETER_ENABLE=false
@@ -314,22 +314,22 @@ MotorControl.M1_PWM_TIMER_UP_IRQ=TIM1_UP_TIM16
 MotorControl.M1_REGULATION_EXECUTION_RATE=1
 MotorControl.M1_RS=0.25
 MotorControl.M1_RSHUNT=0.01175
-MotorControl.M1_SEGDIV=2570
+MotorControl.M1_SEGDIV=1158
 MotorControl.M1_SHARED_SIGNAL_ENABLE=false
 MotorControl.M1_SPD_DIFFERENTIAL_TERM_ENABLING=false
-MotorControl.M1_SPEED_BAND_LOWER_LIMIT=15
+MotorControl.M1_SPEED_BAND_LOWER_LIMIT=8
 MotorControl.M1_SPEED_BAND_UPPER_LIMIT=24
 MotorControl.M1_SPEED_FEEDBACK_CHECK=true
 MotorControl.M1_SPEED_LOOP_FREQUENCY_HZ=400
 MotorControl.M1_SPEED_SENSOR=STO_PLL
 MotorControl.M1_SP_KDDIV=16
 MotorControl.M1_SP_KIDIV=16384
-MotorControl.M1_SP_KPDIV=1024
+MotorControl.M1_SP_KPDIV=2048
 MotorControl.M1_SS_MEAS_ERRORS_BEFORE_FAULTS=75
 MotorControl.M1_STARTING_ANGLE_DEG=0
 MotorControl.M1_STO_FIFO_DEPTH_01HZ=64
 MotorControl.M1_STO_FIFO_DEPTH_DPP=64
-MotorControl.M1_SW_DEADTIME_NS=750
+MotorControl.M1_SW_DEADTIME_NS=4350
 MotorControl.M1_T0_C=25
 MotorControl.M1_TEMPERATURE_READING=true
 MotorControl.M1_TEMP_ADC_SAMPLING_TIME=640
@@ -337,7 +337,7 @@ MotorControl.M1_TEMP_FDBK_ADC=ADC1
 MotorControl.M1_TEMP_FDBK_CHANNEL=ADC_CHANNEL_8
 MotorControl.M1_TF_KDDIV=8192
 MotorControl.M1_TF_KIDIV=16384
-MotorControl.M1_TF_KPDIV=1024
+MotorControl.M1_TF_KPDIV=2048
 MotorControl.M1_TNOISE_NS=5000
 MotorControl.M1_TRANSITION_DURATION=0
 MotorControl.M1_TRISE_NS=5750
@@ -351,7 +351,7 @@ MotorControl.M1_VBUS_ADC_SAMPLING_TIME=640
 MotorControl.M1_VBUS_CHANNEL=ADC_CHANNEL_3
 MotorControl.M1_VBUS_PARTITIONING_FACTOR=0.006493506493506494
 MotorControl.M1_dV_dT=0.028
-MotorControl.MAX_READABLE_CURRENT=21.052
+MotorControl.MAX_READABLE_CURRENT=46.715
 MotorControl.MCP_ASPEP_OVER_UART=true
 MotorControl.MCP_ASYNC_EN=false
 MotorControl.MCP_ASYNC_OVER_ASPEP_EN=false
@@ -417,7 +417,7 @@ MotorControl.SPEED_SENSOR_SELECTION=STATE_OBSERVER_PLL
 MotorControl.START_STOP_BTN=false
 MotorControl.STATE_OBSERVER_PLL=true
 MotorControl.STM32G474RE=true
-MotorControl.SW_DEADTIME_NS=750
+MotorControl.SW_DEADTIME_NS=4350
 MotorControl.TEMPERATURE_READING=true
 MotorControl.TEMP_ADC_SAMPLING_TIME=640
 MotorControl.TEMP_FDBK_ADC=ADC1
@@ -448,7 +448,7 @@ MotorControl.WB_UI_FRICTION=66
 MotorControl.WB_UI_INERTIA=666
 MotorControl.WB_UI_MAGNETIC_STRUCTURE=I-PMSM
 MotorControl.WB_UI_MAX_CURRENT=13.3
-MotorControl.WB_UI_MAX_NOMINAL_DC_VOLTAGE=80
+MotorControl.WB_UI_MAX_NOMINAL_DC_VOLTAGE=400
 MotorControl.WB_UI_MOTOR_DESCRIPTION=Motor high voltage
 MotorControl.WB_UI_OCP_DISABLING_ENABLE=false
 MotorControl.WB_UI_OCP_THRESHOLD=24
@@ -684,7 +684,7 @@ TIM1.Channel-PWM\ Generation6\ No\ Output=TIM_CHANNEL_6
 TIM1.ClearInputSource=TIM_CLEARINPUTSOURCE_NONE
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV2
 TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED2
-TIM1.DeadTime=((DEAD_TIME_COUNTS) * 20)
+TIM1.DeadTime=((DEAD_TIME_COUNTS) / 2)
 TIM1.IPParameters=CounterMode,ClockDivision,AutoReloadPreload,TIM_SlaveMode,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,TIM_MasterOutputTrigger2,BreakState,BreakPolarity,BreakFilter,SourceBRKDigInput,SourceBRKDigInputPolarity,Break2State,Break2Polarity,Break2Filter,SourceBRK2DigInput,AutomaticOutput,OffStateRunMode,OffStateIDLEMode,LockLevel,ClearInputSource,OCFastMode_PWM,Channel-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation1 CH1 CH1N,OC1Preload_PWM,OCIdleState_1,OCPolarity_1,OCNPolarity_1,OCNIdleState_1,Channel-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation2 CH2 CH2N,OC2Preload_PWM,OCIdleState_2,OCPolarity_2,OCNPolarity_2,OCNIdleState_2,Channel-PWM Generation3 CH3 CH3N,OCMode_PWM-PWM Generation3 CH3 CH3N,OC3Preload_PWM,OCIdleState_3,OCPolarity_3,OCNPolarity_3,OCNIdleState_3,Channel-PWM Generation4 No Output,OCMode_PWM-PWM Generation4 No Output,OC4Preload_PWM,OCPolarity_4,OCIdleState_4,Channel-PWM Generation5 No Output,OCMode_PWM-PWM Generation5 No Output,OC5Preload_PWM,OCPolarity_5,OCIdleState_5,Channel-PWM Generation6 No Output,OCMode_PWM-PWM Generation6 No Output,OC6Preload_PWM,OCPolarity_6,OCIdleState_6,Channel,Prescaler,PeriodNoDither,RepetitionCounter,DeadTime,PulseNoDither_1,PulseNoDither_2,PulseNoDither_3,PulseNoDither_4,PulseNoDither_5,PulseNoDither_6
 TIM1.IPParametersWithoutCheck=PulseNoDither_2,PulseNoDither_1,PulseNoDither_6,RepetitionCounter,DeadTime,PulseNoDither_5,PulseNoDither_4,Prescaler,PulseNoDither_3,PeriodNoDither
 TIM1.LockLevel=TIM_LOCKLEVEL_OFF
