Using ADC1 PB0 -> PB1 pin

--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -19,8 +19,8 @@ ADC1.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJEC_T1_TRGO
 ADC1.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONV_EDGE_RISINGFALLING
 ADC1.IPParameters=ClockPrescaler,DataAlign,Resolution,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,Overrun,LowPowerAutoWait,master,EnableAnalogWatchDog1,EnableAnalogWatchDog2,EnableAnalogWatchDog3,EnableInjectedConversion,InjectedConvMode,ExternalTrigInjecConv,ExternalTrigInjecConvEdge,InjNumberOfConversion,InjectedRank-1\#ChannelInjectedConversion,InjectedChannel-1\#ChannelInjectedConversion,InjectedSamplingTime-1\#ChannelInjectedConversion,InjectedOffsetNumber-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,InjectedRank-2\#ChannelInjectedConversion,InjectedChannel-2\#ChannelInjectedConversion,InjectedSamplingTime-2\#ChannelInjectedConversion,InjectedOffsetNumber-2\#ChannelInjectedConversion,InjectedOffset-2\#ChannelInjectedConversion,EnableRegularConversion,ExternalTrigConv,ExternalTrigConvEdge,ScanConvMode,NbrOfConversionFlag,NbrOfConversion,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Offset-2\#ChannelRegularConversion,CommonPathInternal
 ADC1.InjNumberOfConversion=2
-ADC1.InjectedChannel-1\#ChannelInjectedConversion=ADC_CHANNEL_15
-ADC1.InjectedChannel-2\#ChannelInjectedConversion=ADC_CHANNEL_15
+ADC1.InjectedChannel-1\#ChannelInjectedConversion=ADC_CHANNEL_12
+ADC1.InjectedChannel-2\#ChannelInjectedConversion=ADC_CHANNEL_12
 ADC1.InjectedConvMode=None
 ADC1.InjectedOffset-1\#ChannelInjectedConversion=0
 ADC1.InjectedOffset-2\#ChannelInjectedConversion=0
@@ -45,14 +45,6 @@ ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
 ADC1.ScanConvMode=ADC_SCAN_ENABLE
 ADC1.master=1
-ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC3.CommonPathInternal=null|null|null|null
-ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,CommonPathInternal
-ADC3.NbrOfConversionFlag=1
-ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC3.Rank-0\#ChannelRegularConversion=1
-ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC3.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -121,16 +113,15 @@ KeepUserPlacement=false
 Mcu.CPN=STM32G474RET3
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
-Mcu.IP1=ADC3
-Mcu.IP2=CORDIC
-Mcu.IP3=DMA
-Mcu.IP4=MotorControl
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IP8=TIM1
-Mcu.IP9=USART1
-Mcu.IPNb=10
+Mcu.IP1=CORDIC
+Mcu.IP2=DMA
+Mcu.IP3=MotorControl
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IP8=USART1
+Mcu.IPNb=9
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -153,7 +144,7 @@ Mcu.Pin23=VP_TIM1_VS_no_output6
 Mcu.Pin24=VP_MotorControl_MC_ENABLED
 Mcu.Pin3=PC2
 Mcu.Pin4=PA2
-Mcu.Pin5=PB0
+Mcu.Pin5=PB1
 Mcu.Pin6=PB13
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
@@ -208,13 +199,13 @@ MotorControl.M1_BEMF_CONSISTENCY_GAIN=64
 MotorControl.M1_BEMF_CONSISTENCY_TOL=64
 MotorControl.M1_BOARD_MAX_CURRENT=13.3
 MotorControl.M1_BUS_VOLTAGE_READING=true
-MotorControl.M1_CONSTANT1_D=264959
-MotorControl.M1_CONSTANT1_Q=378514
-MotorControl.M1_CONSTANT2_QD=34035
+MotorControl.M1_CONSTANT1_D=331199
+MotorControl.M1_CONSTANT1_Q=473142
+MotorControl.M1_CONSTANT2_QD=42544
 MotorControl.M1_CS_ADC_NUM=1
 MotorControl.M1_CS_ADC_PHASE_SHARED=NONE
 MotorControl.M1_CS_ADC_U=ADC1
-MotorControl.M1_CS_CHANNEL_U=15
+MotorControl.M1_CS_CHANNEL_U=12
 MotorControl.M1_CURRENT_AMPLIFICATION_TOPO=EXTERNAL
 MotorControl.M1_CURRENT_SENSING_TOPO=SINGLE_SHUNT_PHASE_SHIFT
 MotorControl.M1_CURR_SAMPLING_TIME=6
@@ -239,8 +230,8 @@ MotorControl.M1_FW_KI_GAIN=5000
 MotorControl.M1_FW_KPDIV=32768
 MotorControl.M1_FW_KP_GAIN=3000
 MotorControl.M1_FW_VOLTAGE_REF=985
-MotorControl.M1_GAIN1=-24498
-MotorControl.M1_GAIN2=17052
+MotorControl.M1_GAIN1=-24514
+MotorControl.M1_GAIN2=21307
 MotorControl.M1_HALL_PHASE_SHIFT=300
 MotorControl.M1_HALL_SENSORS_PLACEMENT=DEGREES_120
 MotorControl.M1_HIGH_SIDE_IDLE_STATE=false
@@ -253,7 +244,7 @@ MotorControl.M1_LOW_SIDE_IDLE_STATE=false
 MotorControl.M1_LOW_SIDE_SIGNALS_ENABLING=LS_PWM_TIMER
 MotorControl.M1_LS=0.005
 MotorControl.M1_MAX_APPLICATION_SPEED=6000
-MotorControl.M1_MAX_MODULATION_INDEX=100
+MotorControl.M1_MAX_MODULATION_INDEX=81
 MotorControl.M1_MIN_APPLICATION_SPEED=0
 MotorControl.M1_MOTOR_MAX_SPEED_RPM=6000
 MotorControl.M1_MOTOR_NAME=BTH420SDPC9EQA
@@ -290,16 +281,16 @@ MotorControl.M1_PHASE5_DURATION=48000
 MotorControl.M1_PHASE5_FINAL_CURRENT=1
 MotorControl.M1_PHASE5_FINAL_SPEED_RPM=3000
 MotorControl.M1_PID_FLUX_KD_DEFAULT=100
-MotorControl.M1_PID_FLUX_KI_DEFAULT=120
+MotorControl.M1_PID_FLUX_KI_DEFAULT=96
 MotorControl.M1_PID_FLUX_KP_DEFAULT=1674
 MotorControl.M1_PID_SPEED_KD_DEFAULT=0
 MotorControl.M1_PID_SPEED_KI_DEFAULT=7
 MotorControl.M1_PID_SPEED_KP_DEFAULT=3545
 MotorControl.M1_PID_TORQUE_KD_DEFAULT=100
-MotorControl.M1_PID_TORQUE_KI_DEFAULT=120
+MotorControl.M1_PID_TORQUE_KI_DEFAULT=96
 MotorControl.M1_PID_TORQUE_KP_DEFAULT=2392
-MotorControl.M1_PLL_KI_GAIN=71
-MotorControl.M1_PLL_KP_GAIN=798
+MotorControl.M1_PLL_KI_GAIN=45
+MotorControl.M1_PLL_KP_GAIN=638
 MotorControl.M1_POLE_PAIR_NUM=2
 MotorControl.M1_POSITION_CTRL_ENABLING=false
 MotorControl.M1_POTENTIOMETER_ENABLE=false
@@ -307,7 +298,7 @@ MotorControl.M1_POWERBOARD_NAME=STEVAL-IHM023V3
 MotorControl.M1_PWM_CHARGE_BOOT_CAP_DUTY_CYCLES=0.000
 MotorControl.M1_PWM_CHARGE_BOOT_CAP_MS=10
 MotorControl.M1_PWM_DRIVER_PN=L6390D
-MotorControl.M1_PWM_FREQUENCY=8000
+MotorControl.M1_PWM_FREQUENCY=10000
 MotorControl.M1_PWM_TIMER_BRK_IRQ=TIM1_BRK_TIM15
 MotorControl.M1_PWM_TIMER_SELECTION=PWM_TIM1
 MotorControl.M1_PWM_TIMER_UP_IRQ=TIM1_UP_TIM16
@@ -329,7 +320,7 @@ MotorControl.M1_SS_MEAS_ERRORS_BEFORE_FAULTS=75
 MotorControl.M1_STARTING_ANGLE_DEG=0
 MotorControl.M1_STO_FIFO_DEPTH_01HZ=64
 MotorControl.M1_STO_FIFO_DEPTH_DPP=64
-MotorControl.M1_SW_DEADTIME_NS=4350
+MotorControl.M1_SW_DEADTIME_NS=5000
 MotorControl.M1_T0_C=25
 MotorControl.M1_TEMPERATURE_READING=true
 MotorControl.M1_TEMP_ADC_SAMPLING_TIME=640
@@ -339,7 +330,7 @@ MotorControl.M1_TF_KDDIV=8192
 MotorControl.M1_TF_KIDIV=16384
 MotorControl.M1_TF_KPDIV=2048
 MotorControl.M1_TNOISE_NS=5000
-MotorControl.M1_TRANSITION_DURATION=0
+MotorControl.M1_TRANSITION_DURATION=25
 MotorControl.M1_TRISE_NS=5750
 MotorControl.M1_T_MAX=100
 MotorControl.M1_USE_INTERNAL_OPAMP=false
@@ -382,8 +373,8 @@ MotorControl.MOTOR_TYPE=PMSM
 MotorControl.OV_TEMPERATURE_PROT_ENABLING=false
 MotorControl.OV_VOLTAGE_PROT_ENABLING=false
 MotorControl.PHASE_CURRENTS_ADC=ADC1
-MotorControl.PHASE_CURRENTS_CHANNEL=ADC_CHANNEL_15
-MotorControl.PHASE_CURRENTS_GPIO_PIN=LL_GPIO_PIN_0
+MotorControl.PHASE_CURRENTS_CHANNEL=ADC_CHANNEL_12
+MotorControl.PHASE_CURRENTS_GPIO_PIN=LL_GPIO_PIN_1
 MotorControl.PHASE_CURRENTS_GPIO_PORT=GPIOB
 MotorControl.PHASE_UH_GPIO_PIN=LL_GPIO_PIN_8
 MotorControl.PHASE_UH_GPIO_PORT=GPIOA
@@ -404,7 +395,7 @@ MotorControl.PHASE_WL_GPIO_PIN=LL_GPIO_PIN_15
 MotorControl.PHASE_WL_GPIO_PORT=GPIOB
 MotorControl.PHASE_WL_POLARITY=L_ACTIVE_HIGH
 MotorControl.POTENTIOMETER_READING=false
-MotorControl.PWM_FREQUENCY=8000
+MotorControl.PWM_FREQUENCY=10000
 MotorControl.PWM_TIMER_SELECTION=PWM_TIM1
 MotorControl.REGULATION_EXECUTION_RATE=1
 MotorControl.RTOS=NONE
@@ -417,7 +408,7 @@ MotorControl.SPEED_SENSOR_SELECTION=STATE_OBSERVER_PLL
 MotorControl.START_STOP_BTN=false
 MotorControl.STATE_OBSERVER_PLL=true
 MotorControl.STM32G474RE=true
-MotorControl.SW_DEADTIME_NS=4350
+MotorControl.SW_DEADTIME_NS=5000
 MotorControl.TEMPERATURE_READING=true
 MotorControl.TEMP_ADC_SAMPLING_TIME=640
 MotorControl.TEMP_FDBK_ADC=ADC1
@@ -510,10 +501,11 @@ PA9.GPIO_PuPd=GPIO_PULLDOWN
 PA9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=M1_CURR_AMPL
-PB0.Locked=true
-PB0.Signal=SharedAnalog_PB0
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=M1_CURR_AMPL
+PB1.Locked=true
+PB1.Mode=IN12-Single-Ended
+PB1.Signal=ADC1_IN12
 PB13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PB13.GPIO_Label=M1_PWM_UL
 PB13.GPIO_PuPd=GPIO_PULLDOWN
@@ -594,12 +586,12 @@ ProjectManager.ProjectName=ATS230704_R1
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=Makefile
+ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CORDIC_Init-CORDIC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_MotorControl_Init-MotorControl-false-HAL-false,9-MX_ADC3_Init-ADC3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CORDIC_Init-CORDIC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_MotorControl_Init-MotorControl-false-HAL-false
 ProjectManager.iocOrigin=MotorControl
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
 RCC.ADC12Freq_Value=42500000
@@ -620,7 +612,7 @@ RCC.FDCANFreq_Value=170000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=170000000
 RCC.HRTIM1Freq_Value=170000000
-RCC.HSE_VALUE=8000000
+RCC.HSE_VALUE=24000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=170000000
@@ -635,7 +627,7 @@ RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.PLLM=RCC_PLLM_DIV2
+RCC.PLLM=RCC_PLLM_DIV6
 RCC.PLLN=85
 RCC.PLLP=RCC_PLLP_DIV8
 RCC.PLLPoutputFreq_Value=42500000
@@ -663,9 +655,6 @@ SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM1_CH3.ConfNb=1
-SH.SharedAnalog_PB0.0=ADC1_IN15,IN15-Single-Ended
-SH.SharedAnalog_PB0.1=ADC3_IN12,IN12-Single-Ended
-SH.SharedAnalog_PB0.ConfNb=2
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM1.AutomaticOutput=TIM_AUTOMATICOUTPUT_DISABLE
 TIM1.Break2Filter=3
