--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -46,7 +46,9 @@ CAD.provider=
 Dma.Request0=TIM1_CH4
 Dma.Request1=USART1_RX
 Dma.Request2=USART1_TX
-Dma.RequestsNb=3
+Dma.Request3=USART2_TX
+Dma.Request4=USART2_RX
+Dma.RequestsNb=5
 Dma.TIM1_CH4.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM1_CH4.0.EventEnable=DISABLE
 Dma.TIM1_CH4.0.Instance=DMA1_Channel1
@@ -98,12 +100,47 @@ Dma.USART1_TX.2.SyncEnable=DISABLE
 Dma.USART1_TX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.USART1_TX.2.SyncRequestNumber=1
 Dma.USART1_TX.2.SyncSignalID=NONE
+Dma.USART2_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.4.EventEnable=DISABLE
+Dma.USART2_RX.4.Instance=DMA1_Channel5
+Dma.USART2_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.4.Mode=DMA_CIRCULAR
+Dma.USART2_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.4.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART2_RX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART2_RX.4.RequestNumber=1
+Dma.USART2_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART2_RX.4.SignalID=NONE
+Dma.USART2_RX.4.SyncEnable=DISABLE
+Dma.USART2_RX.4.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART2_RX.4.SyncRequestNumber=1
+Dma.USART2_RX.4.SyncSignalID=NONE
+Dma.USART2_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.3.EventEnable=DISABLE
+Dma.USART2_TX.3.Instance=DMA1_Channel4
+Dma.USART2_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.3.Mode=DMA_NORMAL
+Dma.USART2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART2_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.3.RequestNumber=1
+Dma.USART2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART2_TX.3.SignalID=NONE
+Dma.USART2_TX.3.SyncEnable=DISABLE
+Dma.USART2_TX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART2_TX.3.SyncRequestNumber=1
+Dma.USART2_TX.3.SyncSignalID=NONE
 ExtraMW=MotorControl
 ExtraMW.MotorControl.Config=MotorControl
 ExtraMW.MotorControl.Mode=MotorControl
 ExtraMW.MotorControl.Root=MCSDK_v6.2.0-Full/MotorControl
 ExtraMW.MotorControl.Template=templates
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32G474RET3
 Mcu.Family=STM32G4
@@ -116,7 +153,8 @@ Mcu.IP5=RCC
 Mcu.IP6=SYS
 Mcu.IP7=TIM1
 Mcu.IP8=USART1
-Mcu.IPNb=9
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -125,18 +163,21 @@ Mcu.Pin10=PA9
 Mcu.Pin11=PA10
 Mcu.Pin12=PA13
 Mcu.Pin13=PA14
-Mcu.Pin14=PB6
-Mcu.Pin15=PB7
-Mcu.Pin16=VP_CORDIC_VS_CORDIC
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_SYS_VS_DBSignals
-Mcu.Pin19=VP_TIM1_VS_ControllerModeTrigger
+Mcu.Pin14=PD2
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB6
+Mcu.Pin18=PB7
+Mcu.Pin19=VP_CORDIC_VS_CORDIC
 Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin21=VP_TIM1_VS_no_output4
-Mcu.Pin22=VP_TIM1_VS_no_output5
-Mcu.Pin23=VP_TIM1_VS_no_output6
-Mcu.Pin24=VP_MotorControl_MC_ENABLED
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_SYS_VS_DBSignals
+Mcu.Pin22=VP_TIM1_VS_ControllerModeTrigger
+Mcu.Pin23=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin24=VP_TIM1_VS_no_output4
+Mcu.Pin25=VP_TIM1_VS_no_output5
+Mcu.Pin26=VP_TIM1_VS_no_output6
+Mcu.Pin27=VP_MotorControl_MC_ENABLED
 Mcu.Pin3=PF1-OSC_OUT
 Mcu.Pin4=PA2
 Mcu.Pin5=PB1
@@ -144,7 +185,7 @@ Mcu.Pin6=PB13
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PA8
-Mcu.PinsNb=25
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -436,6 +477,8 @@ NVIC.ADC1_2_IRQn=true\:2\:0\:true\:true\:false\:4\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:true\:true\:false\:2\:true\:true\:true
 NVIC.DMA1_Channel2_IRQn=true\:3\:0\:true\:true\:false\:3\:true\:true\:true
+NVIC.DMA1_Channel4_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
+NVIC.DMA1_Channel5_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
@@ -448,6 +491,7 @@ NVIC.SysTick_IRQn=true\:4\:0\:true\:false\:false\:true\:true\:false
 NVIC.TIM1_BRK_TIM15_IRQn=true\:4\:1\:true\:true\:false\:5\:true\:true\:true
 NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:true\:false\:6\:true\:true\:true
 NVIC.USART1_IRQn=true\:3\:1\:true\:true\:false\:1\:true\:true\:true
+NVIC.USART2_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA10.GPIO_Label=M1_PWM_WH
@@ -508,6 +552,11 @@ PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB15.Locked=true
 PB15.Mode=PWM Generation3 CH3 CH3N
 PB15.Signal=TIM1_CH3N
+PB3.Mode=Asynchronous
+PB3.Signal=USART2_TX
+PB4.Locked=true
+PB4.Mode=Asynchronous
+PB4.Signal=USART2_RX
 PB6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB6.GPIO_Label=UART_TX
 PB6.GPIO_Mode=GPIO_MODE_AF_PP
@@ -534,6 +583,10 @@ PC14-OSC32_IN.GPIOParameters=GPIO_Label
 PC14-OSC32_IN.GPIO_Label=DEBUG_LED_RED
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=GPIO_Output
+PD2.GPIOParameters=GPIO_Label
+PD2.GPIO_Label=U2_DIR
+PD2.Locked=true
+PD2.Signal=GPIO_Output
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
@@ -571,7 +624,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CORDIC_Init-CORDIC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_MotorControl_Init-MotorControl-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CORDIC_Init-CORDIC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_MotorControl_Init-MotorControl-false-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-true
 ProjectManager.iocOrigin=MotorControl
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
 RCC.ADC12Freq_Value=42500000
@@ -710,6 +763,8 @@ USART1.BaudRate=115200
 USART1.IPParameters=BaudRate,WordLength,VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART1.WordLength=WORDLENGTH_8B
+USART2.IPParameters=VirtualMode-Asynchronous
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_CORDIC_VS_CORDIC.Mode=CORDIC_Activate
 VP_CORDIC_VS_CORDIC.Signal=CORDIC_VS_CORDIC
 VP_MotorControl_MC_ENABLED.Mode=Enabled
