--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -146,15 +146,16 @@ Mcu.CPN=STM32G474RET3
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=CORDIC
+Mcu.IP10=USART2
 Mcu.IP2=DMA
 Mcu.IP3=MotorControl
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
 Mcu.IP7=TIM1
-Mcu.IP8=USART1
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP8=TIM6
+Mcu.IP9=USART1
+Mcu.IPNb=11
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -177,7 +178,8 @@ Mcu.Pin23=VP_TIM1_VS_ClockSourceITR
 Mcu.Pin24=VP_TIM1_VS_no_output4
 Mcu.Pin25=VP_TIM1_VS_no_output5
 Mcu.Pin26=VP_TIM1_VS_no_output6
-Mcu.Pin27=VP_MotorControl_MC_ENABLED
+Mcu.Pin27=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin28=VP_MotorControl_MC_ENABLED
 Mcu.Pin3=PF1-OSC_OUT
 Mcu.Pin4=PA2
 Mcu.Pin5=PB1
@@ -185,7 +187,7 @@ Mcu.Pin6=PB13
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PA8
-Mcu.PinsNb=28
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -490,6 +492,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:4\:0\:true\:false\:false\:true\:true\:false
 NVIC.TIM1_BRK_TIM15_IRQn=true\:4\:1\:true\:true\:false\:5\:true\:true\:true
 NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:true\:false\:6\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:7\:0\:true\:true\:true\:7\:true\:true\:true
 NVIC.USART1_IRQn=true\:3\:1\:true\:true\:false\:1\:true\:true\:true
 NVIC.USART2_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
@@ -759,6 +762,8 @@ TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM1.TIM_MasterOutputTrigger2=TIM_TRGO2_OC5REF_RISING_OC6REF_RISING
 TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 TIM1.TIM_SlaveMode=TIM_SLAVEMODE_TRIGGER
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM6.IPParameters=AutoReloadPreload
 USART1.BaudRate=115200
 USART1.IPParameters=BaudRate,WordLength,VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
@@ -783,4 +788,6 @@ VP_TIM1_VS_no_output5.Mode=PWM Generation5 No Output
 VP_TIM1_VS_no_output5.Signal=TIM1_VS_no_output5
 VP_TIM1_VS_no_output6.Mode=PWM Generation6 No Output
 VP_TIM1_VS_no_output6.Signal=TIM1_VS_no_output6
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
