TIM6 frequency 1kHz

--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -627,7 +627,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CORDIC_Init-CORDIC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_MotorControl_Init-MotorControl-false-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CORDIC_Init-CORDIC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_MotorControl_Init-MotorControl-false-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true
 ProjectManager.iocOrigin=MotorControl
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
 RCC.ADC12Freq_Value=42500000
@@ -763,7 +763,9 @@ TIM1.TIM_MasterOutputTrigger2=TIM_TRGO2_OC5REF_RISING_OC6REF_RISING
 TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 TIM1.TIM_SlaveMode=TIM_SLAVEMODE_TRIGGER
 TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
-TIM6.IPParameters=AutoReloadPreload
+TIM6.IPParameters=AutoReloadPreload,Prescaler,PeriodNoDither
+TIM6.PeriodNoDither=9999
+TIM6.Prescaler=16
 USART1.BaudRate=115200
 USART1.IPParameters=BaudRate,WordLength,VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
