--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -139,6 +139,10 @@ ExtraMW.MotorControl.Config=MotorControl
 ExtraMW.MotorControl.Mode=MotorControl
 ExtraMW.MotorControl.Root=MCSDK_v6.2.0-Full/MotorControl
 ExtraMW.MotorControl.Template=templates
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -146,16 +150,17 @@ Mcu.CPN=STM32G474RET3
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=CORDIC
-Mcu.IP10=USART2
+Mcu.IP10=USART1
+Mcu.IP11=USART2
 Mcu.IP2=DMA
-Mcu.IP3=MotorControl
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IP8=TIM6
-Mcu.IP9=USART1
-Mcu.IPNb=11
+Mcu.IP3=FREERTOS
+Mcu.IP4=MotorControl
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IP9=TIM6
+Mcu.IPNb=12
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -171,15 +176,16 @@ Mcu.Pin17=PB6
 Mcu.Pin18=PB7
 Mcu.Pin19=VP_CORDIC_VS_CORDIC
 Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_SYS_VS_DBSignals
-Mcu.Pin22=VP_TIM1_VS_ControllerModeTrigger
-Mcu.Pin23=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin24=VP_TIM1_VS_no_output4
-Mcu.Pin25=VP_TIM1_VS_no_output5
-Mcu.Pin26=VP_TIM1_VS_no_output6
-Mcu.Pin27=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin28=VP_MotorControl_MC_ENABLED
+Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_SYS_VS_DBSignals
+Mcu.Pin23=VP_TIM1_VS_ControllerModeTrigger
+Mcu.Pin24=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin25=VP_TIM1_VS_no_output4
+Mcu.Pin26=VP_TIM1_VS_no_output5
+Mcu.Pin27=VP_TIM1_VS_no_output6
+Mcu.Pin28=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin29=VP_MotorControl_MC_ENABLED
 Mcu.Pin3=PF1-OSC_OUT
 Mcu.Pin4=PA2
 Mcu.Pin5=PB1
@@ -187,7 +193,7 @@ Mcu.Pin6=PB13
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PA8
-Mcu.PinsNb=29
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -475,27 +481,30 @@ MotorControl.WB_to_Mx_template_version=23-09-08
 MotorControl.WB_to_Mx_version=6.2.0
 MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
-NVIC.ADC1_2_IRQn=true\:2\:0\:true\:true\:false\:4\:true\:true\:true
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:true\:true\:false\:2\:true\:true\:true
-NVIC.DMA1_Channel2_IRQn=true\:3\:0\:true\:true\:false\:3\:true\:true\:true
-NVIC.DMA1_Channel4_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
-NVIC.DMA1_Channel5_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
+NVIC.ADC1_2_IRQn=true\:2\:0\:true\:true\:false\:4\:false\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:true\:true\:false\:2\:false\:true\:true\:true
+NVIC.DMA1_Channel2_IRQn=true\:3\:0\:true\:true\:false\:3\:false\:true\:true\:true
+NVIC.DMA1_Channel4_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true\:true
+NVIC.DMA1_Channel5_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:true\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_3
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:4\:0\:true\:false\:false\:true\:true\:false
-NVIC.TIM1_BRK_TIM15_IRQn=true\:4\:1\:true\:true\:false\:5\:true\:true\:true
-NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:true\:false\:6\:true\:true\:true
-NVIC.TIM6_DAC_IRQn=true\:7\:0\:true\:true\:true\:7\:true\:true\:true
-NVIC.USART1_IRQn=true\:3\:1\:true\:true\:false\:1\:true\:true\:true
-NVIC.USART2_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:true\:false
+NVIC.PendSV_IRQn=true\:7\:0\:false\:false\:false\:true\:true\:false\:false
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=false
+NVIC.SavedSvcallIrqHandlerGenerated=false
+NVIC.SavedSystickIrqHandlerGenerated=false
+NVIC.SysTick_IRQn=true\:7\:0\:true\:false\:true\:true\:true\:true\:false
+NVIC.TIM1_BRK_TIM15_IRQn=true\:4\:0\:true\:true\:false\:5\:false\:true\:true\:true
+NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:true\:false\:6\:false\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:7\:0\:true\:true\:true\:7\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:3\:0\:true\:true\:false\:1\:false\:true\:true\:true
+NVIC.USART2_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false\:false
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA10.GPIO_Label=M1_PWM_WH
 PA10.GPIO_PuPd=GPIO_PULLDOWN
@@ -774,6 +783,8 @@ USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_CORDIC_VS_CORDIC.Mode=CORDIC_Activate
 VP_CORDIC_VS_CORDIC.Signal=CORDIC_VS_CORDIC
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_MotorControl_MC_ENABLED.Mode=Enabled
 VP_MotorControl_MC_ENABLED.Signal=MotorControl_MC_ENABLED
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
