--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -141,7 +141,7 @@ ExtraMW.MotorControl.Root=MCSDK_v6.2.0-Full/MotorControl
 ExtraMW.MotorControl.Template=templates
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock
+FREERTOS.Tasks01=Print_Task,8,128,StartPrintTask,Default,NULL,Static,PrintTaskBuffer,PrintTaskControlBlock;Modbus_Task,40,128,StartModbusTask,Default,NULL,Static,Modbus_TaskBuffer,Modbus_TaskControlBlock;Temperature_Tas,24,128,StartTemperatureTask,Default,NULL,Static,Temperature_TasBuffer,Temperature_TasControlBlock
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
