--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -40,6 +40,14 @@ ADC1.Resolution=ADC_RESOLUTION_12B
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
 ADC1.ScanConvMode=ADC_SCAN_ENABLE
 ADC1.master=1
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV1
+ADC2.CommonPathInternal=null|null|null|null
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,ClockPrescaler,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC2.NbrOfConversionFlag=1
+ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -149,51 +157,53 @@ KeepUserPlacement=false
 Mcu.CPN=STM32G474RET3
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
-Mcu.IP1=CORDIC
-Mcu.IP10=USART1
-Mcu.IP11=USART2
-Mcu.IP2=DMA
-Mcu.IP3=FREERTOS
-Mcu.IP4=MotorControl
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IP8=TIM1
-Mcu.IP9=TIM6
-Mcu.IPNb=12
+Mcu.IP1=ADC2
+Mcu.IP10=TIM6
+Mcu.IP11=USART1
+Mcu.IP12=USART2
+Mcu.IP2=CORDIC
+Mcu.IP3=DMA
+Mcu.IP4=FREERTOS
+Mcu.IP5=MotorControl
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SYS
+Mcu.IP9=TIM1
+Mcu.IPNb=13
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PD2
-Mcu.Pin15=PB3
-Mcu.Pin16=PB4
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=VP_CORDIC_VS_CORDIC
+Mcu.Pin10=PA8
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PD2
+Mcu.Pin16=PB3
+Mcu.Pin17=PB4
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
 Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_SYS_VS_DBSignals
-Mcu.Pin23=VP_TIM1_VS_ControllerModeTrigger
-Mcu.Pin24=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin25=VP_TIM1_VS_no_output4
-Mcu.Pin26=VP_TIM1_VS_no_output5
-Mcu.Pin27=VP_TIM1_VS_no_output6
-Mcu.Pin28=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin29=VP_MotorControl_MC_ENABLED
+Mcu.Pin20=VP_CORDIC_VS_CORDIC
+Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_SYS_VS_DBSignals
+Mcu.Pin24=VP_TIM1_VS_ControllerModeTrigger
+Mcu.Pin25=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin26=VP_TIM1_VS_no_output4
+Mcu.Pin27=VP_TIM1_VS_no_output5
+Mcu.Pin28=VP_TIM1_VS_no_output6
+Mcu.Pin29=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PF1-OSC_OUT
-Mcu.Pin4=PA2
-Mcu.Pin5=PB1
-Mcu.Pin6=PB13
-Mcu.Pin7=PB14
-Mcu.Pin8=PB15
-Mcu.Pin9=PA8
-Mcu.PinsNb=30
+Mcu.Pin30=VP_MotorControl_MC_ENABLED
+Mcu.Pin4=PC2
+Mcu.Pin5=PA2
+Mcu.Pin6=PB1
+Mcu.Pin7=PB13
+Mcu.Pin8=PB14
+Mcu.Pin9=PB15
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -595,6 +605,11 @@ PC14-OSC32_IN.GPIOParameters=GPIO_Label
 PC14-OSC32_IN.GPIO_Label=DEBUG_LED_RED
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=GPIO_Output
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=M1_IPM_TEMP
+PC2.Locked=true
+PC2.Mode=IN8-Single-Ended
+PC2.Signal=ADC2_IN8
 PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=U2_DIR
 PD2.Locked=true
@@ -779,7 +794,8 @@ USART1.BaudRate=115200
 USART1.IPParameters=BaudRate,WordLength,VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART1.WordLength=WORDLENGTH_8B
-USART2.IPParameters=VirtualMode-Asynchronous
+USART2.BaudRate=9600
+USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_CORDIC_VS_CORDIC.Mode=CORDIC_Activate
 VP_CORDIC_VS_CORDIC.Signal=CORDIC_VS_CORDIC
