Increase ma current to 20A

--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -149,7 +149,7 @@ ExtraMW.MotorControl.Root=MCSDK_v6.2.0-Full/MotorControl
 ExtraMW.MotorControl.Template=templates
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
-FREERTOS.Tasks01=Print_Task,8,128,StartPrintTask,Default,NULL,Static,PrintTaskBuffer,PrintTaskControlBlock;Modbus_Task,40,128,StartModbusTask,Default,NULL,Static,Modbus_TaskBuffer,Modbus_TaskControlBlock;Temperature_Tas,24,128,StartTemperatureTask,Default,NULL,Static,Temperature_TasBuffer,Temperature_TasControlBlock
+FREERTOS.Tasks01=Print_Task,8,256,StartPrintTask,Default,NULL,Static,PrintTaskBuffer,PrintTaskControlBlock;Modbus_Task,40,128,StartModbusTask,Default,NULL,Static,Modbus_TaskBuffer,Modbus_TaskControlBlock;Temperature_Tas,24,128,StartTemperatureTask,Default,NULL,Static,Temperature_TasBuffer,Temperature_TasControlBlock
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -251,7 +251,7 @@ MotorControl.M1_ANGC={-477,-1446,-2413,-3355,-4308,-5250,-6160,-7075}
 MotorControl.M1_AUXILIARY_SPEED_SENSOR=NONE
 MotorControl.M1_BEMF_CONSISTENCY_GAIN=64
 MotorControl.M1_BEMF_CONSISTENCY_TOL=64
-MotorControl.M1_BOARD_MAX_CURRENT=13.3
+MotorControl.M1_BOARD_MAX_CURRENT=20.0
 MotorControl.M1_BUS_VOLTAGE_READING=true
 MotorControl.M1_CONSTANT1_D=164333
 MotorControl.M1_CONSTANT1_Q=234761
@@ -264,7 +264,7 @@ MotorControl.M1_CURRENT_AMPLIFICATION_TOPO=EXTERNAL
 MotorControl.M1_CURRENT_SENSING_TOPO=SINGLE_SHUNT_PHASE_SHIFT
 MotorControl.M1_CURR_SAMPLING_TIME=6
 MotorControl.M1_DBG_OPEN_LOOP_ENABLE=false
-MotorControl.M1_DC_CURRENT_RS_MEAS=13.3
+MotorControl.M1_DC_CURRENT_RS_MEAS=20.0
 MotorControl.M1_DEFAULT_CONTROL_MODE=STC_SPEED_MODE
 MotorControl.M1_DEFAULT_FLUX_COMPONENT=0
 MotorControl.M1_DEFAULT_TARGET_SPEED_RPM=1300
@@ -291,8 +291,8 @@ MotorControl.M1_HALL_SENSORS_PLACEMENT=DEGREES_120
 MotorControl.M1_HIGH_SIDE_IDLE_STATE=false
 MotorControl.M1_HW_DEAD_TIME_NS=8000
 MotorControl.M1_ICL_ENABLED=false
-MotorControl.M1_ID_DEMAG=-13.3
-MotorControl.M1_IQMAX=13.210894566168061
+MotorControl.M1_ID_DEMAG=-20.0
+MotorControl.M1_IQMAX=19.0
 MotorControl.M1_LDLQ_RATIO=0.700
 MotorControl.M1_LOW_SIDE_IDLE_STATE=false
 MotorControl.M1_LOW_SIDE_SIGNALS_ENABLING=LS_PWM_TIMER
@@ -307,7 +307,7 @@ MotorControl.M1_MOTOR_VOLTAGE_CONSTANT=43.1
 MotorControl.M1_MTPA_ENABLING=true
 MotorControl.M1_NB_CONSECUTIVE_TESTS=3
 MotorControl.M1_NOMINAL_BUS_VOLTAGE_V=400
-MotorControl.M1_NOMINAL_CURRENT=13.3
+MotorControl.M1_NOMINAL_CURRENT=20.0
 MotorControl.M1_OBS_MINIMUM_SPEED_RPM=900
 MotorControl.M1_OCP_BKIN_FILTER=3
 MotorControl.M1_OCP_BKIN_MODE=EXT_MODE
@@ -478,12 +478,12 @@ MotorControl.WB_UI_FLUX_TARGET=0
 MotorControl.WB_UI_FRICTION=666
 MotorControl.WB_UI_INERTIA=666
 MotorControl.WB_UI_MAGNETIC_STRUCTURE=I-PMSM
-MotorControl.WB_UI_MAX_CURRENT=13.3
+MotorControl.WB_UI_MAX_CURRENT=20.0
 MotorControl.WB_UI_MAX_NOMINAL_DC_VOLTAGE=400
 MotorControl.WB_UI_MOTOR_DESCRIPTION=Motor high voltage
 MotorControl.WB_UI_OCP_DISABLING_ENABLE=false
 MotorControl.WB_UI_OCP_THRESHOLD=24
-MotorControl.WB_UI_PW_BOARD_MAX_RATED_CURRENT=13.3
+MotorControl.WB_UI_PW_BOARD_MAX_RATED_CURRENT=20.0
 MotorControl.WB_UI_PW_BOARD_MAX_VOLTAGE=400
 MotorControl.WB_UI_PW_BOARD_MIN_VOLTAGE=18
 MotorControl.WB_UI_VPOL=1.65
@@ -502,15 +502,15 @@ NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:true\:false
-NVIC.PendSV_IRQn=true\:7\:0\:false\:false\:false\:true\:true\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=false
 NVIC.SavedSvcallIrqHandlerGenerated=false
 NVIC.SavedSystickIrqHandlerGenerated=false
-NVIC.SysTick_IRQn=true\:7\:0\:true\:false\:true\:true\:true\:true\:false
+NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:true\:true\:true\:true\:false
 NVIC.TIM1_BRK_TIM15_IRQn=true\:4\:0\:true\:true\:false\:5\:false\:true\:true\:true
-NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:true\:false\:6\:false\:true\:true\:true
+NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:true\:true\:false\:6\:false\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:7\:0\:true\:true\:true\:7\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:3\:0\:true\:true\:false\:1\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true\:true
@@ -651,7 +651,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CORDIC_Init-CORDIC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_MotorControl_Init-MotorControl-false-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CORDIC_Init-CORDIC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_MotorControl_Init-MotorControl-false-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_ADC2_Init-ADC2-false-HAL-true
 ProjectManager.iocOrigin=MotorControl
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
 RCC.ADC12Freq_Value=42500000
@@ -820,3 +820,4 @@ VP_TIM1_VS_no_output6.Signal=TIM1_VS_no_output6
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
+rtos.0.ip=FREERTOS
