--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -149,7 +149,7 @@ ExtraMW.MotorControl.Root=MCSDK_v6.2.0-Full/MotorControl
 ExtraMW.MotorControl.Template=templates
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
-FREERTOS.Tasks01=Print_Task,8,256,StartPrintTask,Default,NULL,Static,PrintTaskBuffer,PrintTaskControlBlock;Modbus_Task,40,128,StartModbusTask,Default,NULL,Static,Modbus_TaskBuffer,Modbus_TaskControlBlock;Temperature_Tas,24,128,StartTemperatureTask,Default,NULL,Static,Temperature_TasBuffer,Temperature_TasControlBlock
+FREERTOS.Tasks01=Print_Task,8,256,StartPrintTask,As weak,NULL,Static,PrintTaskBuffer,PrintTaskControlBlock;Modbus_Task,40,128,StartModbusTask,As weak,NULL,Static,Modbus_TaskBuffer,Modbus_TaskControlBlock;Temperature_Tas,24,128,StartTemperatureTask,As weak,NULL,Static,Temperature_TasBuffer,Temperature_TasControlBlock
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -247,7 +247,7 @@ MotorControl.LOW_MEMORY_FOOTPRINT_REG=false
 MotorControl.LOW_SIDE_IDLE_STATE=false
 MotorControl.LOW_SIDE_SIGNALS_ENABLING=LS_PWM_TIMER
 MotorControl.M1_AMPLIFICATION_GAIN=6.06
-MotorControl.M1_ANGC={-477,-1446,-2413,-3355,-4308,-5250,-6160,-7075}
+MotorControl.M1_ANGC={-715,-2153,-3584,-4984,-6367,-7705,-9010,-10261}
 MotorControl.M1_AUXILIARY_SPEED_SENSOR=NONE
 MotorControl.M1_BEMF_CONSISTENCY_GAIN=64
 MotorControl.M1_BEMF_CONSISTENCY_TOL=64
@@ -292,14 +292,14 @@ MotorControl.M1_HIGH_SIDE_IDLE_STATE=false
 MotorControl.M1_HW_DEAD_TIME_NS=8000
 MotorControl.M1_ICL_ENABLED=false
 MotorControl.M1_ID_DEMAG=-20.0
-MotorControl.M1_IQMAX=19.0
+MotorControl.M1_IQMAX=19.714317974313154
 MotorControl.M1_LDLQ_RATIO=0.700
 MotorControl.M1_LOW_SIDE_IDLE_STATE=false
 MotorControl.M1_LOW_SIDE_SIGNALS_ENABLING=LS_PWM_TIMER
 MotorControl.M1_LS=0.005
 MotorControl.M1_MAX_APPLICATION_SPEED=5000
-MotorControl.M1_MAX_MODULATION_INDEX=89
-MotorControl.M1_MIN_APPLICATION_SPEED=0
+MotorControl.M1_MAX_MODULATION_INDEX=81
+MotorControl.M1_MIN_APPLICATION_SPEED=900
 MotorControl.M1_MOTOR_MAX_SPEED_RPM=5000
 MotorControl.M1_MOTOR_NAME=BTH420SDPC9EQA
 MotorControl.M1_MOTOR_RATED_FLUX=1.055730079
@@ -308,13 +308,13 @@ MotorControl.M1_MTPA_ENABLING=true
 MotorControl.M1_NB_CONSECUTIVE_TESTS=3
 MotorControl.M1_NOMINAL_BUS_VOLTAGE_V=400
 MotorControl.M1_NOMINAL_CURRENT=20.0
-MotorControl.M1_OBS_MINIMUM_SPEED_RPM=900
+MotorControl.M1_OBS_MINIMUM_SPEED_RPM=850
 MotorControl.M1_OCP_BKIN_FILTER=3
 MotorControl.M1_OCP_BKIN_MODE=EXT_MODE
 MotorControl.M1_OCP_BKIN_POLARITY=EMSTOP_ACTIVE_LOW
 MotorControl.M1_OCP_DESTINATION=TIM_BKIN
 MotorControl.M1_OCP_TOPOLOGY=EXTERNAL
-MotorControl.M1_OFST={0,68,206,408,679,1015,1404,1860}
+MotorControl.M1_OFST={0,152,457,903,1491,2202,3035,3966}
 MotorControl.M1_OVERMODULATION=false
 MotorControl.M1_OVP_THRESHOLD_LOW=400
 MotorControl.M1_OV_VOLTAGE_PROT_ENABLING=false
@@ -334,14 +334,14 @@ MotorControl.M1_PHASE5_DURATION=20000
 MotorControl.M1_PHASE5_FINAL_CURRENT=5
 MotorControl.M1_PHASE5_FINAL_SPEED_RPM=1300
 MotorControl.M1_PID_FLUX_KD_DEFAULT=100
-MotorControl.M1_PID_FLUX_KI_DEFAULT=71
-MotorControl.M1_PID_FLUX_KP_DEFAULT=2492
+MotorControl.M1_PID_FLUX_KI_DEFAULT=66
+MotorControl.M1_PID_FLUX_KP_DEFAULT=2264
 MotorControl.M1_PID_SPEED_KD_DEFAULT=0
-MotorControl.M1_PID_SPEED_KI_DEFAULT=1154
-MotorControl.M1_PID_SPEED_KP_DEFAULT=2253
+MotorControl.M1_PID_SPEED_KI_DEFAULT=1270
+MotorControl.M1_PID_SPEED_KP_DEFAULT=2481
 MotorControl.M1_PID_TORQUE_KD_DEFAULT=100
-MotorControl.M1_PID_TORQUE_KI_DEFAULT=71
-MotorControl.M1_PID_TORQUE_KP_DEFAULT=3560
+MotorControl.M1_PID_TORQUE_KI_DEFAULT=66
+MotorControl.M1_PID_TORQUE_KP_DEFAULT=3234
 MotorControl.M1_PLL_KI_GAIN=45
 MotorControl.M1_PLL_KP_GAIN=638
 MotorControl.M1_POLE_PAIR_NUM=2
@@ -358,11 +358,11 @@ MotorControl.M1_PWM_TIMER_UP_IRQ=TIM1_UP_TIM16
 MotorControl.M1_REGULATION_EXECUTION_RATE=1
 MotorControl.M1_RS=0.25
 MotorControl.M1_RSHUNT=0.01175
-MotorControl.M1_SEGDIV=2334
+MotorControl.M1_SEGDIV=3483
 MotorControl.M1_SHARED_SIGNAL_ENABLE=false
 MotorControl.M1_SPD_DIFFERENTIAL_TERM_ENABLING=false
-MotorControl.M1_SPEED_BAND_LOWER_LIMIT=14
-MotorControl.M1_SPEED_BAND_UPPER_LIMIT=24
+MotorControl.M1_SPEED_BAND_LOWER_LIMIT=16
+MotorControl.M1_SPEED_BAND_UPPER_LIMIT=22
 MotorControl.M1_SPEED_FEEDBACK_CHECK=true
 MotorControl.M1_SPEED_LOOP_FREQUENCY_HZ=500
 MotorControl.M1_SPEED_SENSOR=STO_PLL
@@ -380,7 +380,7 @@ MotorControl.M1_TF_KIDIV=16384
 MotorControl.M1_TF_KPDIV=4096
 MotorControl.M1_TNOISE_NS=4500
 MotorControl.M1_TRANSITION_DURATION=0
-MotorControl.M1_TRISE_NS=4500
+MotorControl.M1_TRISE_NS=7000
 MotorControl.M1_USE_INTERNAL_OPAMP=false
 MotorControl.M1_UV_VOLTAGE_PROT_ENABLING=false
 MotorControl.M1_VARIANCE_THRESHOLD=0.25
