Add ADC3 to debug

--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -48,6 +48,14 @@ ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-0\#ChannelRegularConversion=1
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC3.CommonPathInternal=null|null|null|null
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC3.NbrOfConversionFlag=1
+ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC3.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -160,19 +168,20 @@ Mcu.CPN=STM32G474RET3
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=TIM1
-Mcu.IP11=TIM6
-Mcu.IP12=USART1
-Mcu.IP13=USART2
-Mcu.IP2=CORDIC
-Mcu.IP3=DMA
-Mcu.IP4=FREERTOS
-Mcu.IP5=I2C1
-Mcu.IP6=MotorControl
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=SYS
-Mcu.IPNb=14
+Mcu.IP10=SYS
+Mcu.IP11=TIM1
+Mcu.IP12=TIM6
+Mcu.IP13=USART1
+Mcu.IP14=USART2
+Mcu.IP2=ADC3
+Mcu.IP3=CORDIC
+Mcu.IP4=DMA
+Mcu.IP5=FREERTOS
+Mcu.IP6=I2C1
+Mcu.IP7=MotorControl
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=15
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -559,8 +568,7 @@ PA9.Signal=S_TIM1_CH2
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=M1_CURR_AMPL
 PB1.Locked=true
-PB1.Mode=IN12-Single-Ended
-PB1.Signal=ADC1_IN12
+PB1.Signal=SharedAnalog_PB1
 PB13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PB13.GPIO_Label=M1_PWM_UL
 PB13.GPIO_PuPd=GPIO_PULLDOWN
@@ -665,7 +673,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CORDIC_Init-CORDIC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_MotorControl_Init-MotorControl-false-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_ADC2_Init-ADC2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CORDIC_Init-CORDIC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_MotorControl_Init-MotorControl-false-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_ADC2_Init-ADC2-false-HAL-true,12-MX_I2C1_Init-I2C1-false-HAL-true
 ProjectManager.iocOrigin=MotorControl
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
 RCC.ADC12Freq_Value=42500000
@@ -729,6 +737,9 @@ SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM1_CH3.ConfNb=1
+SH.SharedAnalog_PB1.0=ADC1_IN12,IN12-Single-Ended
+SH.SharedAnalog_PB1.1=ADC3_IN1,IN1-Single-Ended
+SH.SharedAnalog_PB1.ConfNb=2
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM1.AutomaticOutput=TIM_AUTOMATICOUTPUT_DISABLE
 TIM1.Break2Filter=3
