Modubus with control board
1. Uart2 19200 baud WL9 EVEN 1
2. Speed Slope

--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -869,9 +869,11 @@ USART1.BaudRate=115200
 USART1.IPParameters=BaudRate,WordLength,VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART1.WordLength=WORDLENGTH_8B
-USART2.BaudRate=9600
-USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART2.BaudRate=19200
+USART2.IPParameters=VirtualMode-Asynchronous,BaudRate,WordLength,Parity
+USART2.Parity=PARITY_EVEN
 USART2.VirtualMode-Asynchronous=VM_ASYNC
+USART2.WordLength=WORDLENGTH_9B
 VP_CORDIC_VS_CORDIC.Mode=CORDIC_Activate
 VP_CORDIC_VS_CORDIC.Signal=CORDIC_VS_CORDIC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
